--- a/app/src/main/res/layout/fragment_encontrar.xml
+++ b/app/src/main/res/layout/fragment_encontrar.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Aprendiendo Número"
+                android:text="Aprendiendo Números"
                 android:textSize="28dp"
                 android:layout_gravity="center"
                 android:textColor="@color/black"
@@ -44,9 +44,14 @@
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
                 android:text="Aprendiendo números"
-                android:textSize="17dp"
+
                 android:layout_gravity="center"
-                android:textColor="#849095"
+
+
+                android:textSize="20dp"
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
                 />
 
 
@@ -57,9 +62,14 @@
                 android:id="@+id/encuentra_numero_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="17dp"
-                android:layout_marginTop="15dp"
+
+
                 android:text=""
+
+                android:textSize="20dp"
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
                 />
 
 
