--- a/app/src/main/res/layout/fragment_estimacion_libros.xml
+++ b/app/src/main/res/layout/fragment_estimacion_libros.xml
@@ -51,9 +51,13 @@
                 android:id="@+id/pregunta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="17dp"
-                android:layout_marginTop="15dp"
+
                 android:text="Estima la cantidad de cuadernos y seleciona tu respuesta."
+
+                android:textSize="20dp"
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
                 />
 
 
