--- a/app/src/main/res/layout/fragment_motivacion.xml
+++ b/app/src/main/res/layout/fragment_motivacion.xml
@@ -19,9 +19,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:layout_marginTop="30dp"
+
         android:gravity="center"
-        android:textSize="18dp"
+
+
+        android:textSize="20dp"
+        android:layout_marginTop="10dp"
+        android:textColor="#255CE6"
+        android:textStyle="bold"
+
+
         android:text="¿Qué tan motivado se siente hacia el aprendizaje sobre la resolución de problemas de cantidad con la aplicación móvil MatPrim?"/>
 
     <LinearLayout
