--- a/app/src/main/res/layout/resta.xml
+++ b/app/src/main/res/layout/resta.xml
@@ -44,9 +44,14 @@
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
                 android:text="Resta con llevadas, vamos tu puedes."
-                android:textSize="17dp"
+
                 android:layout_gravity="center"
-                android:textColor="#849095"
+
+
+                android:textSize="20dp"
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
                 />
 
 
