--- a/app/src/main/res/layout/fragment_mayor_menos.xml
+++ b/app/src/main/res/layout/fragment_mayor_menos.xml
@@ -32,8 +32,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Aprendiendo Número"
-                android:textSize="28dp"
+                android:text="Aprendiendo Números"
+                android:textSize="26dp"
                 android:layout_gravity="center"
                 android:textColor="@color/black"
                 />
@@ -43,9 +43,12 @@
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
                 android:text="Ordena los números de mayor a menor"
-                android:textSize="17dp"
+                android:textSize="19dp"
                 android:layout_gravity="center"
-                android:textColor="#849095"
+
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
                 />
 
             <TextView
