--- a/app/src/main/res/layout/fragment_menor_mayor_i.xml
+++ b/app/src/main/res/layout/fragment_menor_mayor_i.xml
@@ -32,8 +32,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Aprendiendo Número"
-                android:textSize="28dp"
+                android:text="Aprendiendo Números"
+                android:textSize="26dp"
                 android:layout_gravity="center"
                 android:textColor="@color/black"
                 />
@@ -43,9 +43,11 @@
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
                 android:text="Ordena los números de menor a mayor"
-                android:textSize="17dp"
                 android:layout_gravity="center"
-                android:textColor="#849095"
+                android:textSize="20dp"
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
                 />
 
             <TextView
