--- a/app/src/main/res/layout/fragment_modulo_i_v.xml
+++ b/app/src/main/res/layout/fragment_modulo_i_v.xml
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="¡Vamos, tu puedes!"
+            android:text="¡Vamos, tú puedes!"
             android:textColor="#5DA118"
             android:textSize="20dp"
             />
