--- a/app/src/main/res/layout/fragment_resultado.xml
+++ b/app/src/main/res/layout/fragment_resultado.xml
@@ -11,6 +11,7 @@
         android:layout_height="60dp"
         android:background="@drawable/com_facebook_close"/>
     <TextView
+        android:id="@+id/resultado_textual"
         android:layout_marginTop="140dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
