--- a/app/src/main/res/layout/fragment_decenas.xml
+++ b/app/src/main/res/layout/fragment_decenas.xml
@@ -54,7 +54,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="200dp"
                 android:weightSum="6"
                 android:layout_marginTop="35dp"
                 android:layout_gravity="center"
@@ -77,10 +77,14 @@
                 android:id="@+id/pregunta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="17dp"
+
                 android:layout_marginTop="15dp"
-                android:textColor="#C51D1D"
+
                 android:text="¿Cuántas decenas y cuántas unidades hay?"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
+                android:textSize="20dp"
+
                 />
 
             <LinearLayout
