--- a/app/src/main/res/layout/fragment_decenas_hard.xml
+++ b/app/src/main/res/layout/fragment_decenas_hard.xml
@@ -90,7 +90,7 @@
                         android:textSize="20dp"
                         android:gravity="center"
                         android:textColor="@color/black"
-                        android:text="29 tienen"
+                        android:text="29 tiene"
                         />
                     <EditText
                         android:id="@+id/primero"
@@ -127,7 +127,7 @@
                         android:textSize="20dp"
                         android:gravity="center"
                         android:textColor="@color/black"
-                        android:text="92 tienen"
+                        android:text="92 tiene"
                         />
                     <EditText
                           android:id="@+id/segundo"
