--- a/app/src/main/res/layout/fragment_longitud_lapiz.xml
+++ b/app/src/main/res/layout/fragment_longitud_lapiz.xml
@@ -39,11 +39,11 @@
             android:justificationMode="inter_word"
             android:text="Aprendiendo longitudes"
 
-            android:layout_gravity="center"
 
             android:textSize="20dp"
+            android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:textColor="#255CE6"
+            android:textColor="@color/black"
             android:textStyle="bold"
             />
 
@@ -53,8 +53,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="17dp"
-            android:layout_marginTop="15dp"
             android:text="¿Qué lápiz es más largo?"
+
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:textColor="#255CE6"
+            android:textStyle="bold"
             />
 
 
@@ -125,9 +129,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="17dp"
-            android:layout_marginTop="25dp"
             android:layout_marginBottom="20dp"
             android:text="Marca la respuesta correcta."
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:textColor="#255CE6"
+            android:textStyle="bold"
             />
 
         <LinearLayout
