--- a/app/src/main/res/layout/fragment_sumar_con_llevadas_i.xml
+++ b/app/src/main/res/layout/fragment_sumar_con_llevadas_i.xml
@@ -43,14 +43,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
-                android:text="Sumar con llevadas, vamos tu puedes."
-
-                android:layout_gravity="center"
-
-
+                android:text="Sumar con llevadas, vamos tú puedes."
                 android:textSize="20dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:textColor="#255CE6"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 />
 
@@ -63,8 +60,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
-                android:layout_marginTop="15dp"
                 android:text="¿Cuál es el resultado de esta suma?"
+                android:gravity="center"
+
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
                 />
 
 
@@ -98,7 +99,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:text="2"
+                        android:text="1"
                         android:textSize="25dp"/>
 
                 </RelativeLayout>
@@ -112,7 +113,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:text="0"
+                        android:text="9"
                         android:textSize="25dp"/>
 
                 </RelativeLayout>
@@ -178,7 +179,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:text="6"
+                        android:text="7"
                         android:textSize="25dp"/>
 
                 </RelativeLayout>
