--- a/app/src/main/res/layout/fragment_peso.xml
+++ b/app/src/main/res/layout/fragment_peso.xml
@@ -29,10 +29,11 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="Pesos"
+                android:gravity="center"
                 android:textSize="28dp"
                 android:layout_gravity="left"
                 android:textColor="@color/black"
