--- a/app/src/main/res/layout/fragment_comparacion_i_i_.xml
+++ b/app/src/main/res/layout/fragment_comparacion_i_i_.xml
@@ -27,7 +27,7 @@
         android:textColor="#255CE6"
         android:textStyle="bold"
 
-        android:text="Elige el signo de comparación correcto"/>
+        android:text="De acuerdo  a esta comparación, elige la opción correcta"/>
 
 
 
@@ -35,8 +35,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="3"
-        android:layout_marginTop="100dp"
-        android:orientation="horizontal">
+        android:layout_marginTop="300dp"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/seleccion_primero"
@@ -46,14 +46,13 @@
             android:gravity="center">
             <TextView
                 android:id="@+id/primero"
-                android:layout_width="100dp"
+                android:layout_width="400dp"
                 android:layout_height="100dp"
                 android:textColor="@color/black"
-                android:text="&gt;"
+                android:text="71 es mayor que 69"
                 android:gravity="center"
                 android:padding="10dp"
-                android:background="@drawable/circle_transparente"
-                android:textSize="60dp"/>
+                android:textSize="20dp"/>
 
         </RelativeLayout>
         <RelativeLayout
@@ -64,14 +63,13 @@
             android:gravity="center">
             <TextView
                 android:id="@+id/segundo"
-                android:layout_width="100dp"
+                android:layout_width="200dp"
                 android:layout_height="100dp"
                 android:textColor="@color/black"
-                android:text="&lt;"
+                android:text="69 es mayor que 71"
                 android:gravity="center"
                 android:padding="10dp"
-                android:background="@drawable/circle_transparente"
-                android:textSize="60dp"/>
+                android:textSize="20dp"/>
 
         </RelativeLayout>
 
@@ -83,14 +81,13 @@
             android:gravity="center">
             <TextView
                 android:id="@+id/tercero"
-                android:layout_width="100dp"
+                android:layout_width="400dp"
                 android:layout_height="100dp"
                 android:textColor="@color/black"
                 android:gravity="center"
-                android:text="="
+                android:text="71 es menor que 69"
                 android:padding="10dp"
-                android:background="@drawable/circle_transparente"
-                android:textSize="60dp"/>
+                android:textSize="20dp"/>
 
         </RelativeLayout>
 
