--- a/app/src/main/res/layout/fragment_estrategia_i.xml
+++ b/app/src/main/res/layout/fragment_estrategia_i.xml
@@ -68,6 +68,7 @@
                 android:layout_weight="1"
                 android:id="@+id/primero"
                 android:text="43"
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
@@ -84,13 +85,7 @@
                     android:padding="10dp"
                     android:textSize="25dp"/>
             </RelativeLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="40dp"
-                android:gravity="center"
-                android:text="+"/>
+
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -104,6 +99,13 @@
                     android:padding="10dp"
                     android:textSize="25dp"/>
             </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="40dp"
+                android:gravity="center"
+                android:text="+"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -126,6 +128,7 @@
                 android:text="53"
                 android:layout_weight="1"
                 android:id="@+id/tercero"
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
@@ -142,13 +145,7 @@
                     android:padding="10dp"
                     android:textSize="25dp"/>
             </RelativeLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="40dp"
-                android:gravity="center"
-                android:text="+"/>
+
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -166,6 +163,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textSize="40dp"
+                android:gravity="center"
+                android:visibility="gone"
+                android:text="+"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text=""/>
             <TextView
                 android:layout_width="wrap_content"
@@ -175,6 +180,12 @@
         </LinearLayout>
 
 
+        <View
+            android:layout_width="200dp"
+            android:layout_height="1dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/black" />
 
         <LinearLayout
             android:layout_margin="10dp"
@@ -183,11 +194,6 @@
             android:orientation="horizontal"
             android:weightSum="5"
             >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text=""/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -204,7 +210,25 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:padding="10dp"
+                    android:layout_marginLeft="30dp"
                     android:textSize="25dp"/>
+
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center">
+                <EditText
+                    android:id="@+id/resultado2"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:padding="10dp"
+                    android:textSize="25dp"/>
+
+
             </RelativeLayout>
 
             <TextView
