--- a/app/src/main/res/layout/fragment_comparaciones_i.xml
+++ b/app/src/main/res/layout/fragment_comparaciones_i.xml
@@ -29,7 +29,10 @@
             android:text="Completa la expresión númerica"
             android:textSize="17dp"
             android:layout_gravity="center"
-            android:textColor="#849095"
+
+            android:layout_marginTop="20dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             />
 
 
@@ -50,6 +53,9 @@
                 android:textSize="28dp"
                 android:layout_gravity="center"
                 android:textColor="@color/black"
+
+
+
                 />
 
 
@@ -60,8 +66,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
-                android:layout_marginTop="15dp"
-                android:textColor="#DA2222"
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
+
+
+
                 android:text="¿Nicolás, Valentina y Nina cuentan su propina en el recreo?"
                 />
 
@@ -141,9 +151,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
-                android:layout_marginTop="15dp"
-                android:textColor="#DA2222"
+
                 android:text="Ayudanos a ordenar las cantidades mayor a menor"
+
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
                 />
 
             <ImageView
