--- a/app/src/main/res/layout/fragment_comparaciones.xml
+++ b/app/src/main/res/layout/fragment_comparaciones.xml
@@ -60,8 +60,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
-                android:layout_marginTop="15dp"
-                android:textColor="#DA2222"
+
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
+
                 android:text="¿Nicolás, Valentina y Nina cuentan su propina en el recreo?"
                 />
 
@@ -141,9 +144,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
-                android:layout_marginTop="15dp"
-                android:textColor="#DA2222"
+
                 android:text="Ayudanos a ordenar las cantidades mayor a menor"
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
+
                 />
 
             <ImageView
