--- a/app/src/main/res/layout/fragment_comparacion_i.xml
+++ b/app/src/main/res/layout/fragment_comparacion_i.xml
@@ -19,10 +19,16 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:gravity="center"
+
         android:layout_height="wrap_content"
-        android:textColor="#D81313"
+
         android:textSize="18dp"
+
+        android:gravity="center"
+        android:layout_marginTop="40dp"
+        android:textColor="#255CE6"
+        android:textStyle="bold"
+
         android:text="Coloca  los números sobre el recuadro de acuerdo al signo de comparación."/>
 
 
@@ -30,15 +36,25 @@
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="100dp"
         android:textSize="20dp"
-        android:text="97 -------------------- 83"/>
+        android:text="97 -------------------- 83"
+
+
+
+        android:layout_gravity="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+
+
+        />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="150dp"
+
         android:weightSum="3"
         android:padding="30dp"
         android:orientation="horizontal">
