--- a/app/src/main/res/layout/suma.xml
+++ b/app/src/main/res/layout/suma.xml
@@ -45,26 +45,26 @@
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
                 android:text="Sumar sin llevadas, vamos tu puedes."
-
-                android:layout_gravity="center"
-
                 android:textSize="20dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:textColor="#255CE6"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 />
-
-
-
-
 
             <TextView
                 android:id="@+id/pregunta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
-                android:layout_marginTop="15dp"
                 android:text="¿Cuál es el resultado de esta suma?"
+
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
+
+
                 />
 
 
