--- a/app/src/main/res/layout/resta.xml
+++ b/app/src/main/res/layout/resta.xml
@@ -43,14 +43,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
-                android:text="Resta con llevadas, vamos tu puedes."
-
-                android:layout_gravity="center"
-
-
+                android:text="Resta con llevadas, vamos tú puedes."
                 android:textSize="20dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:textColor="#255CE6"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 />
 
@@ -63,10 +60,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
-                android:layout_marginTop="15dp"
                 android:text="¿Cuál es el resultado de esta resta?"
-                />
 
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:textColor="#255CE6"
+                android:textStyle="bold"
+                />
 
 
             <LinearLayout
